--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pandas>=2.3.3",
     "plotly>=6.3.1",
     "python-dotenv>=1.1.1",
+    "pyzmq>=27.1.0",
     "requests>=2.32.5",
     "seaborn>=0.13.2",
     "sparqlwrapper>=2.0.0",
