--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "folium>=0.20.0",
     "html5lib>=1.1",
+    "kaleido==0.2.1",
     "linearmodels>=7.0",
     "lxml>=6.0.2",
     "marimo>=0.17.1",
@@ -14,7 +15,7 @@ dependencies = [
     "numpy>=2.3.4",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
-    "plotly>=6.3.1",
+    "plotly==6.3.0",
     "python-dotenv>=1.1.1",
     "pyzmq>=27.1.0",
     "requests>=2.32.5",
